tests/snapshots/integration__integration_tests__approval_ui__approval_single_command.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 0
----- stdout -----
⚪ [2mpost-create declined[0m
✅ [32mCreated new worktree for [1m[32mfeature/test-approval[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].feature-test-approval[0m[0m

💡 [2mTo enable automatic cd, run: wt config shell[0m

----- stderr -----

🟡 [33mPermission required to execute [1m[33m1[0m command[0m

⚪ [1mtest-repo[0m ([2mtest-repo[0m) wants to execute:

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'Worktree path: [REPO].feature-test-approval'[0m[0m

💡 Allow and remember? [1m[y/N][0m
